--- a/my-first-project/src/app/product-list/product-list.component.html
+++ b/my-first-project/src/app/product-list/product-list.component.html
@@ -13,6 +13,10 @@
     <button (click)="share()">
         share
     </button>
+    <app-product-alerts
+        [product]="product"
+        (notify)="onNotify()">
+    </app-product-alerts>
 </div>
 
 
